--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -2,9 +2,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
     <string name="about">
         <![CDATA[
-        <big><b>Adivinador</b></big>
-        <br><b>Versión: 1.5.1</b>
-        <br><br>2014-2018 Memoeslink Futura
+        <big><b>%1$s</b></big>
+        <br><b>Versión: %2$s (%3$d)</b>
+        <br><br>2014-%4$d Memoeslink Futura
         <br><small>Guillermo Almaguer (memoeslink)</small>
         <br><small>memocad@gmail.com</small>
         <br><br>Aplicación de predicción del futuro
