Refactored code. Moved Activity classes to other package.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1083,6 +1083,8 @@
         <item>Caso de prueba</item>
         <item>Nombre masculino</item>
         <item>Nombre femenino</item>
+        <item>Patronímico masculino</item>
+        <item>Patronímico femenino</item>
         <item>Nombre masculino compuesto</item>
         <item>Nombre femenino compuesto</item>
         <item>Nombre masculino doble</item>
